half of the tld processing is working. still half way to go.